# basic_rag

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docker/grafana/provisioning/dashboards/: provider.yaml  rag_pipeline.json
docker/prometheus/: prometheus.yml
eval/: baseline.json  golden.jsonl
scripts/: ingest.sh
src/rag/: __init__.py  config.py
src/rag/api/: __init__.py  api_metrics.py  app.py  config.py  deps.py  middleware.py  models.py
src/rag/api/routes/: admin.py  ingest.py  query.py  upload.py
src/rag/assembler/: __init__.py  base.py  budget.py  citations.py  dedup.py  parent.py  pipeline.py  reorder.py
src/rag/chunker/: __init__.py  chunk.py  factory.py  parent_child.py  recursive.py  section.py  semantic.py  sentence.py  token_counter.py
src/rag/embedder/: __init__.py  base.py  bm25.py  cache.py  cohere_embedder.py  factory.py  openai_embedder.py  sentence_transformer.py
src/rag/enricher/: __init__.py  base.py  hypothetical.py  language.py  ner.py  pipeline.py  title.py
src/rag/eval/: __init__.py  __main__.py  dataset.py  metrics.py  runner.py
src/rag/generation/: __init__.py  anthropic_llm.py  base.py  factory.py  faithfulness.py  guard.py  openai_llm.py  pipeline.py  prompts.py
src/rag/ingestion/: __init__.py  log.py
src/rag/loaders/: __init__.py  base.py  csv_loader.py  docx.py  html.py  json_loader.py  pdf.py  registry.py  text.py
src/rag/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/rag/retriever/: __init__.py  base.py  dense.py  hybrid.py  pipeline.py  rerankers.py  transforms.py
src/rag/vector_store/: __init__.py  filters.py  schema.py  snapshot.py  store.py
tests/api/: conftest.py  test_admin_routes.py  test_config.py  test_ingest_routes.py  test_middleware.py  test_query_routes.py  test_upload_routes.py
tests/assembler/: test_base.py  test_budget.py  test_citations.py  test_dedup.py  test_parent.py  test_pipeline.py  test_reorder.py
tests/chunker/: test_chunk.py  test_factory.py  test_parent_child.py  test_recursive.py  test_section.py  test_sentence.py  test_token_counter.py
tests/embedder/: test_base.py  test_bm25.py  test_cache.py  test_cohere_embedder.py  test_factory.py  test_openai_embedder.py  test_sentence_transformer.py
tests/enricher/: test_base.py  test_hypothetical.py  test_language.py  test_ner.py  test_pipeline.py  test_title.py
tests/eval/: test_dataset.py  test_metrics.py  test_runner.py
tests/generation/: test_base.py  test_factory.py  test_faithfulness.py  test_guard.py  test_llms.py  test_pipeline.py  test_prompts.py
tests/ingestion/: test_log.py
tests/loaders/: test_base.py  test_csv.py  test_docx.py  test_html.py  test_json.py  test_pdf.py  test_registry.py  test_text.py
tests/observability/: test_logging.py  test_metrics.py  test_tracing.py
tests/retriever/: test_base.py  test_pipeline.py  test_rerankers.py  test_retrievers.py  test_transforms.py
tests/vector_store/: conftest.py  test_filters.py  test_schema.py  test_store.py
