[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Production-grade RAG pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Vector store
    "qdrant-client>=1.13.0,<2.0.0",
    # Embeddings
    "sentence-transformers>=3.0.0",
    # LLM
    "anthropic>=0.28.0",
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Async / utilities
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    # Document loading
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    # Enricher
    "langdetect>=1.0.0",
    # Caching / storage
    "redis>=5.0.0",
    # OpenTelemetry
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    # Metrics
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
    # Type stubs
    "types-redis>=4.6.0",
    "types-beautifulsoup4>=4.12.0",
]
eval = [
    "ragas>=0.1.0",
    "datasets>=2.20.0",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length enforced by formatter, not linter
]

[tool.ruff.lint.isort]
known-first-party = ["rag"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true
show_error_codes = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "pdfplumber.*",
    "docx.*",
    "bs4.*",
    "ragas.*",
    "tiktoken.*",
    "transformers.*",
    "langdetect.*",
    "spacy.*",
    "qdrant_client.*",
]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=src/rag",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "-v",
]
markers = [
    "integration: tests that require running services (Qdrant, Redis)",
    "slow: tests that take >5 seconds",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/rag"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
